Fixed horizontal scroll issue from interactions between cart, header, and footer widths.

--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
 /* Header */
 
 .header {
-    width: 100%;
     min-width: 930px;
     height: 61px;
     margin-bottom: 5px;
@@ -36,7 +35,6 @@ body {
     float: right;
     border-left: 2px solid #bcc4cc;
     height: 100%;
-    padding: 0 20px;
     color: #dce4ec;
     border-top-left-radius: 20px;
     border-bottom-left-radius: 20px;
@@ -51,10 +49,13 @@ a#cart-link {
     text-decoration: none;
     color: #dce4ec;
     display: block;
-    padding: 20px 0;
+    height: 100%;
+    width: 100%;
 }
 
 span.cart-count {
+    display: block;
+    padding: 18px 15px; /* center item count text */
 }
 
 /* Search Bar */
@@ -64,9 +65,6 @@ span.cart-count {
     margin-left: 75px;
     margin-top: 5px;
     float: left;
-}
-
-.search-top {
 }
 
 #search-selector {
@@ -198,7 +196,6 @@ span.cart-count {
 /* Footer */
 
 .footer {
-    width: 100%;
     background-color: #363636;
     color: #d8e1e9;
     margin-top: 5px;
